# CrowdedAndroid

./: .gitignore  CMakeLists.txt
docs/: Building.md
src/: hook.h  log.h  main.cpp
src/gamedata/: func.cpp  func.h  offsets.cpp  offsets.h
src/patches/: generic.cpp  generic.h  meeting_hud.cpp  meeting_hud.h
src/structs/: memory.cpp  memory.h
